--- a/.github/workflows/JuliaStable.yml
+++ b/.github/workflows/JuliaStable.yml
@@ -1,5 +1,8 @@
 name: JuliaStable
 on:
+  push:
+    branches: [main, test]
+    tags: '*'
   merge_group:
   pull_request:
   workflow_dispatch:
@@ -13,8 +16,8 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - macos-latest
-          - windows-latest
+          # - macos-latest
+          # - windows-latest
     steps:
       - name: Set up Actions
         uses: actions/checkout@v1
