--- a/.github/workflows/JuliaStable.yml
+++ b/.github/workflows/JuliaStable.yml
@@ -9,31 +9,31 @@ on:
 
 jobs:
   test:
-    name: ${{ matrix.os }}
+    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
+        version:
+          - '1'
+          # - 'nightly'
         os:
           - ubuntu-latest
-          # - macos-latest
+          # - macOS-latest
           # - windows-latest
+        arch:
+          - x64
     steps:
-      - name: Set up Actions
-        uses: actions/checkout@v1
-      - name: Set up Julia
-        uses: julia-actions/setup-julia@v1
+      - uses: actions/checkout@v4
+      - uses: julia-actions/setup-julia@v1
         with:
-          version: "1"
-      - name: Use Github Registry for Linux and Mac-OS
-        if: runner.os != 'Windows'
-        run: |
-          julia -e 'using Pkg; Pkg.Registry.rm("General"); Pkg.Registry.add(RegistrySpec(url="https://github.com/JuliaRegistries/General"))'
-          julia --project -e 'using Pkg; Pkg.instantiate();'
-      - name: Use Github Registry for Windows
-        if: runner.os == 'Windows'
-        run: |
-          julia -e 'using Pkg; Pkg.Registry.rm(\"General\"); Pkg.Registry.add(RegistrySpec(url=\"https://github.com/JuliaRegistries/General\"))'
-          julia --project -e 'using Pkg; Pkg.instantiate();'
-      - name: Run Tests
-        uses: julia-actions/julia-runtest@latest
+          version: ${{ matrix.version }}
+          arch: ${{ matrix.arch }}
+      - uses: julia-actions/cache@v1
+      - uses: julia-actions/julia-buildpkg@latest
+      - uses: julia-actions/julia-runtest@latest
+        # continue-on-error: ${{ matrix.version == 'nightly' }}
+      - uses: julia-actions/julia-processcoverage@v1
+      - uses: codecov/codecov-action@v3
+        with:
+          file: lcov.info
