--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ HypergeometricFunctions = "34004b35-14d8-5ef3-9330-4cdb6864b03a"
 LazyArtifacts = "4af54fe1-eca0-43a8-85a7-787d91b784e3"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NetcdfIO = "6a36f34d-89cf-423a-87c4-84549e82f670"
+Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PkgUtility = "0d262f2c-28e9-492c-8e19-d7a5c4f11611"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
