--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -5,10 +5,12 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 Land = "a4d78162-daa3-41d7-a3fe-155b9207f750"
 NetcdfIO = "6a36f34d-89cf-423a-87c4-84549e82f670"
 PkgUtility = "0d262f2c-28e9-492c-8e19-d7a5c4f11611"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [compat]
-DataFrames = "1.3.6"
-JLD2 = "0.4.23"
-NetcdfIO = "0.2.5"
-PkgUtility = "0.2.0"
+DataFrames = "1.6"
+JLD2 = "0.4"
+NetcdfIO = "0.2"
+PkgUtility = "0.2"
 julia = "1.7"
